--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,6 @@
     "**/yarn-error.log": true,
     "**/yarn.lock": true
   },
-  "solidity.compileUsingRemoteVersion": "v0.8.10+commit.fc410830"
+  "solidity.compileUsingRemoteVersion": "v0.8.10+commit.fc410830",
+  "eslint.enable": false
 }
